[package]
name = "N_m3u8-RE_rust"
version = "0.1.0"
edition = "2021"
authors = ["nilaoda"]
description = "Cross-platform DASH/HLS/MSS downloader"
license = "MIT"

[dependencies]
clap = { version = "4.5", features = ["derive", "color", "std", "env"] }
reqwest = { version = "0.11", features = ["json", "stream", "rustls-tls"] }
tokio = { version = "1.36", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
quick-xml = { version = "0.31", features = ["serde", "serialize"] }
futures-util = "0.3"
crypto = "0.2"
aes = "0.8"
cbc = "0.1"
ecb = "0.1"
chacha20 = "0.9"
log = "0.4"
env_logger = "0.11"
indicatif = "0.17"
i18n-embed = "0.14"
i18n-embed-fl = "0.7"
fluent = "0.16"
fluent-syntax = "0.11"
lazy_static = "1.4"
strum = { version = "0.26", features = ["derive"] }
strum_macros = "0.26"
regex = "1.10"
url = "2.5"
chrono = "0.4"
percent-encoding = "2.3"
bytes = "1.6"
tempfile = "3.10"
path-absolutize = "3.1"
num_cpus = "1.16"
hex = "0.4"

[dev-dependencies]
tokio-test = "0.4"
assert_cmd = "2.0"
predicates = "3.0"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"

[[bin]]
name = "N_m3u8-RE"
path = "src/main.rs"
